# teammatch_optimizer

./: README.md  main.py  pyproject.toml  requirements.txt  settings.py  team_preference_template.xlsm  test.py
data/0_input/: heats_data.xlsx
src/: handle_result.py  input_processor.py  model_builder.py  model_optimizer.py  objects.py
